# tree-sitter-verse

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.tmp  tree-sitter.json
bindings/c/: tree-sitter-verse.h  tree-sitter-verse.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_verse/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVerseTests/: TreeSitterVerseTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks.txt  comments.txt  control_flow.txt  declarations.txt  expr_meta.txt  functions.txt  literals.txt  macros.txt  operators.txt
